src-tauri/output.txt
    Checking nexspot v0.2.1 (F:\my_ai\nexspot\src-tauri)
warning: unused variable: `prompt`
  --> src\service\ai\openai.rs:58:30
   |
58 |     async fn generate(&self, prompt: &str) -> Result<String> {
   |                              ^^^^^^ help: if this is intentional, prefix it with an underscore: `_prompt`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

error[E0597]: `app_state` does not live long enough
  --> src\service\native_overlay\save.rs:34:54
   |
33 |                             let app_state = app_inner.state::<crate::app_state::AppState>();
   |                                 --------- binding `app_state` declared here
34 |                             if let Ok(mut c_state) = app_state.config_state.lock() {
   |                                                      ^^^^^^^^^--------------------
   |                                                      |
   |                                                      borrowed value does not live long enough
   |                                                      a temporary with access to the borrow is created here ...
...
45 |                         });
   |                         -
   |                         |
   |                         `app_state` dropped here while still borrowed
   |                         ... and the borrow might be used here, when that temporary is dropped and runs the destructor for type `std::result::Result<std::sync::MutexGuard<'_, ConfigState>, PoisonError<std::sync::MutexGuard<'_, ConfigState>>>`
   |
help: consider adding semicolon after the expression so its temporaries are dropped sooner, before the local variables declared by the block are dropped
   |
44 |                             };
   |                              +

For more information about this error, try `rustc --explain E0597`.
warning: `nexspot` (lib) generated 1 warning
error: could not compile `nexspot` (lib) due to 1 previous error; 1 warning emitted
